@@ -6,8 +6,16 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishFlag && !rootProje
     apply plugin: "org.springframework.boot"
 
     sourceSets {
+        /**
+         * Make resources become reloadable.
+         * Application’s static resources are loaded from their source location.
+         */
         bootRun {
             resources {
+                srcDirs new File("//etc/cas/templates/"),
+                        new File("${project(":webapp").getProjectDir()}/cas-server-webapp-resources/src/main/resources/"),
+                        new File("${project(":support").getProjectDir()}/cas-server-support-thymeleaf/src/main/resources/"),
+                        new File("${project(":support").getProjectDir()}/cas-server-support-themes-collection/src/main/resources/")
             }
         }
     }
@@ -84,13 +92,14 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishFlag && !rootProje
         
         def list = []
         list.add("-XX:TieredStopAtLevel=1")
-        list.add("-Xverify:none")
         list.add("--add-modules")
         list.add("java.se")
         list.add("--add-exports")
         list.add("java.base/jdk.internal.ref=ALL-UNNAMED")
         list.add("--add-opens")
         list.add("java.base/java.lang=ALL-UNNAMED")
+        list.add("--add-opens")
+        list.add("java.base/sun.security.action=jdk.crypto.ec")
         list.add("--add-opens")
         list.add("java.base/java.nio=ALL-UNNAMED")
         list.add("--add-opens")
